# ark-personal

./: .gitignore  DEVELOPMENT.md  deploy.sh  next.config.js  package-lock.json  package.json  settings.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
Docs/: AGENT-TEAMS.md  ARCHITECTURE.md  DATABASE.md  INTERFACES.md  PRD.md  TESTING.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: auction.rs  expense.rs  inventory.rs  mod.rs  settings.rs  timer.rs  transmitter.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_transmitter.sql  003_inventory_expense.sql  004_alarm_started_at.sql  005_alarm_original_duration.sql
src-tauri/src/notifications/: mod.rs  windows_toast.rs
src-tauri/src/parser/: discord.rs  facebook.rs  mod.rs  text_parser.rs
src-tauri/src/scheduler/: auction_monitor.rs  mod.rs
src-tauri/tests/: db_integration.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/auctions/: page.tsx
src/app/expenses/: page.tsx
src/app/inventory/: page.tsx
src/app/raising/: page.tsx
src/app/settings/: page.tsx
src/app/timer/: page.tsx
src/components/: AddServerDialog.tsx  AppLayout.tsx  AuctionCard.tsx  AuctionDetail.tsx  AuctionForm.tsx  CategoryFieldManager.tsx  CategoryForm.tsx  CountdownTimer.tsx  FilterBar.tsx  InventoryItemForm.tsx  StatusBadge.tsx  TimerCard.tsx  TransactionForm.tsx  TransmitterTimerCard.tsx
src/lib/: store.ts  tauri.ts  types.ts
(+8 files in other folders)
