[package]
name = "auction-personal"
version = "0.2.2"
description = "Ark Personal Tools - Desktop utility app"
authors = ["you"]
edition = "2021"

[lib]
name = "auction_personal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.21"
windows = { version = "0.58", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
] }
log = "0.4"
env_logger = "0.11"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
